# project1_Dukhanina_Galina_M25-555

./: .gitignore  README.md  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
